--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/rpivo/react-automation-profiler-example-app/issues"
   },
-  "homepage": "https://github.com/rpivo/react-automation-profiler-example-app#readme"
+  "homepage": "https://github.com/rpivo/react-automation-profiler-example-app#readme",
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  }
 }
