--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "an example app that shows how react-automation-profiler can be used to auto-profile an app",
   "main": "index.js",
   "scripts": {
-    "build": ""
+    "build": "",
+    "update": "npx npm-check-updates -u"
   },
   "repository": {
     "type": "git",
@@ -22,8 +23,13 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^10.0.0",
+    "@rollup/plugin-typescript": "^6.1.0",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
     "express-compression-server": "0.0.7",
     "react-automation-profiler": "^0.7.5",
-    "rollup": "^2.33.0"
+    "rollup": "^2.33.0",
+    "typescript": "^4.0.5"
   }
 }
