--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-automation-profiler-example-app",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "an example app that shows how react-automation-profiler can be used to auto-profile an app",
   "main": "index.js",
   "scripts": {
-    "dev": "rm -rf dist && mkdir dist && rollup -c",
+    "dev": "bash ./sh/dev.sh",
     "update": "npx npm-check-updates -u"
   },
   "repository": {
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
+    "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-typescript": "^6.1.0",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
