--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-automation-profiler-example-app",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "an example app that shows how react-automation-profiler can be used to auto-profile an app",
   "main": "index.js",
   "scripts": {
@@ -34,11 +34,12 @@
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-typescript": "^6.1.0",
-    "@types/react": "^16.9.55",
+    "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
-    "express-compression-server": "0.0.7",
-    "react-automation-profiler": "^0.7.5",
-    "rollup": "^2.33.0",
+    "express-compression-server": "^1.0.0",
+    "nodemon": "^2.0.6",
+    "react-automation-profiler": "^0.8.1",
+    "rollup": "^2.33.1",
     "typescript": "^4.0.5"
   }
 }
