--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-automation-profiler-example-app",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "an example app that shows how react-automation-profiler can be used to auto-profile an app",
   "main": "index.js",
   "scripts": {
-    "dev": "bash ./sh/dev.sh",
+    "dev": "node ./server/serve.js",
     "update": "npx npm-check-updates -u"
   },
   "repository": {
@@ -36,7 +36,7 @@
     "@rollup/plugin-typescript": "^6.1.0",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
-    "express-compression-server": "^1.0.0",
+    "express-compression-server": "^1.1.0",
     "nodemon": "^2.0.6",
     "react-automation-profiler": "^0.8.1",
     "rollup": "^2.33.1",
